# spectre-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package.json
app/: index.html
circuits/: build.sh  spectre.circom
docs/: DEPLOY.md  whitepaper.md
programs/spectre/: Cargo.toml
programs/spectre/src/: lib.rs  merkle.rs  verifier.rs  vk.rs
relayer/: .env.example  Dockerfile  Procfile  index.ts  package.json
scripts/: deposit.js  gen_verifier.js  init_pool.js  withdraw.js
tests/: spectre.test.ts
