[package]
name = "spectre"
version = "0.1.0"
description = "SPECTRE - Zero-Knowledge Privacy Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spectre"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-snark = "0.4.0"
